--- a/client/src/App.css
+++ b/client/src/App.css
@@ -370,7 +370,7 @@ a.shop-now img {
 
 .row {
     width: 100%;
-    margin: 0!important;
+    margin: 0 !important;
 }
 
 @media (min-width: 1200px) {
@@ -511,4 +511,82 @@ li.list-group-item {
     font-size: 13px;
     margin: 0 0 10px 0 !important;
     font-weight: 600;
+}
+
+.form-control {
+    padding: 1.275rem 0.75rem !important;
+}
+
+select {
+    padding: 10px 15px !important;
+    border: 1px solid #ced4da;
+    border-radius: 3px;
+    width: 100%;
+}
+
+.select-form {
+    display: flex;
+    flex-direction: column;
+    width: 49%;
+}
+
+.card-subtitle {
+    min-height: 40px;
+}
+
+.dropzone {
+    cursor: pointer;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-width: 2px;
+    border-radius: 2px;
+    border-color: #eeeeee;
+    border-style: dashed;
+    background-color: #fafafa;
+    color: #bdbdbd;
+    outline: none;
+    transition: border 0.24s ease-in-out;
+}
+
+ul.box-img-upload {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+ul.box-img-upload li {
+    width: calc(25% - 10px);
+    margin: 0 10px 0 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    position: relative;
+}
+
+ul.box-img-upload li img {
+    width: 100%;
+}
+
+.remove-img {
+    width: 30px;
+    height: 30px;
+    background: #ccc;
+    border-radius: 50%;
+    padding: 5px;
+    position: absolute;
+    right: -15px;
+    bottom: -10px;
+    cursor: pointer;
+}
+
+.remove-img img {
+    width: 100%;
+    vertical-align: baseline;
+}
+
+.card-img-top {
+    height: 250px;
 }
