--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,7 +114,7 @@ body {
 }
 
 .header {
-    box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 .login {
@@ -589,4 +589,115 @@ ul.box-img-upload li img {
 
 .card-img-top {
     height: 250px;
+}
+
+.product-image__main-pic {
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.product-image__thumb-box {
+    overflow-x: scroll;
+    margin: 10px 0 0 0;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    padding: 10PX;
+    border-radius: 3px;
+}
+
+.product-image-thumb {
+    float: left;
+    width: 20%;
+    margin: 0 10px 0 0;
+}
+
+
+/* width */
+
+.product-image__thumb-box::-webkit-scrollbar {
+    height: 5px;
+}
+
+
+/* Track */
+
+.product-image__thumb-box::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+.product-image__thumb-box::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+
+/* Handle on hover */
+
+.product-image__thumb-box::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.product__des {
+    font-size: 13px;
+    line-height: 17px;
+    margin: 0 0 2px;
+    text-transform: uppercase;
+    color: #767677;
+}
+
+h1.product__title {
+    font-size: 33px;
+    /* line-height: 28px; */
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 15px 0;
+}
+
+.product__price {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.product__add {
+    background-color: #000;
+    border-color: #fff;
+    color: #fff;
+    display: inline-flex;
+    padding: 10px 20px;
+    margin: 20px 0;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 200px;
+    position: relative;
+    cursor: pointer;
+}
+
+.product__add:before {
+    content: "";
+    display: block;
+    position: absolute;
+    transition: .1s cubic-bezier(.3, 0, .45, 1);
+    border-bottom: 1px solid #000;
+    border-left: 1px solid #000;
+    bottom: -3px;
+    height: 3px;
+    left: 3px;
+    width: 100%;
+}
+
+.product__add:after {
+    content: "";
+    display: block;
+    position: absolute;
+    transition: .1s cubic-bezier(.3, 0, .45, 1);
+    border-right: 1px solid #000;
+    border-top: 1px solid #000;
+    height: 100%;
+    right: -3px;
+    top: 3px;
+    width: 3px;
 }
