--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,8 +6,8 @@
 
 html,
 body * {
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     font-family: "Montserrat", sans-serif;
 }
 
